made some adjustments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="item1"><!--this is the first container div -->
                     <div class="daniel"><!--this is the imageand the text div that will be flex-->
                         <img src="image/image-daniel.jpg">
-                        <div class="para-txt"><!--this is the daniel paragraph text-->
+                        <div class="para-txt1"><!--this is the daniel paragraph text-->
                             <h4>Daniel Clifford</h4>
                             <h6>Verified Graduate </h6>
                         </div>
@@ -37,7 +37,7 @@
                 <div class="item2"><!--this is the second container div-->
                     <div class="jona"><!--this is the image and the text div of the second div that will be flex-->
                         <img src="image/image-jonathan.jpg">
-                        <div class="para-txt"><!--this is the jona paragraph text-->
+                        <div class="para-txt2"><!--this is the jona paragraph text-->
                             <h4> Jonathan Walters</h4>
                             <h6>Verified Graduate </h6>
                         </div>
@@ -74,7 +74,7 @@
                 <div class="item4"><!--this is the fouth container div-->
                    <div class="patrick"><!--this is the image and the text div of the fouth container that will be flex-->
                     <img src="image/image-patrick.jpg">
-                      <div class=" para-txt"><!--this is patrick paragraph text-->
+                      <div class=" para-txt3"><!--this is patrick paragraph text-->
                         <h4> Patrick Abrams </h4>
                         <h6>Verified Graduate </h6>
                       </div>
@@ -90,7 +90,7 @@
                             to be able to go out in the world and present myself as a capable junior developer. 
                             The standard is above the rest. You will get the personal 
                             attention you need from an incredible community of smart and amazing people.
-                        /p>
+                        </p>
                    </div>
                 </div>
             </div>
